<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeActivity" >
    <item android:id="@+id/action_select_all"
        android:icon="@drawable/ic_action_select_all"
        android:title="@string/action_select_all"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/action_delete"
        android:orderInCategory="200"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_save"
        android:icon="@drawable/ic_action_save"
        android:title="@string/action_save"
        android:orderInCategory="300"
        app:showAsAction="ifRoom" />
</menu>
